# l2winddir

./: .gitignore  Analyse_simple_conv_on_coloc.ipynb  data_module.py  main.py  prediction.ipynb  prediction_analyse.ipynb  pyproject.toml  setup.py  simple_conv.py  simple_conv_env.yml
best_model/simple_conv_1_2_128_5_True_None_True_s1_wv_sv_ds/.hydra/: config.yaml  hydra.yaml  overrides.yaml
best_model/simple_conv_1_2_128_5_True_None_True_s1_wv_sv_ds/wind_direction_model/1_2_128_5_True_None_True_s1_wv_sv_ds/: events.out.tfevents.1743746119.compute-101-15.2298451.87  events.out.tfevents.1743747381.compute-101-15.2298451.88  events.out.tfevents.1743747386.compute-101-15.2298451.89
best_model/simple_conv_1_4_128_5_False_None_ren_ds/.hydra/: config.yaml  hydra.yaml  overrides.yaml
best_model/simple_conv_1_4_128_5_False_None_ren_ds/wind_direction_model/1_4_128_5_False_None_ren_ds/: events.out.tfevents.1724946423.compute-101-15  events.out.tfevents.1724947994.compute-101-15  (+2 more)
best_model/simple_conv_1_4_128_5_True_None_ren_ds/.hydra/: config.yaml  hydra.yaml
best_model/simple_conv_1_4_128_5_True_None_ren_s1_iw_sv_ds/.hydra/: overrides.yaml
best_model/simple_conv_mdn_2_4_128_7_False_None_ren_ds/.hydra/: config.yaml  hydra.yaml  overrides.yaml
best_model/simple_conv_mdn_2_4_128_7_True_0.0001_ren_ds/.hydra/: overrides.yaml
best_model/simple_conv_mdn_2_4_128_7_True_0.0001_ren_s1_iw_dv_ds/.hydra/: config.yaml  hydra.yaml
l2winddir/: _version.py  data_module.py  main.py  predict.py  safe_predict.py  simple_conv.py
recipe/: meta.yaml
(+14 files in other folders)
