[project]
name = "l2winddir"
description = "A package for predicting wind direction"
authors = [{ name = "jean2262", email = "jean-renaud.miadana@ocean-scope.com" }]
license = { text = "MIT" }
readme = "README.md"
dependencies = [
    "grdtiler",
    "hydra-zen",
    "omegaconf",
    "pytorch",
    "pytorch-cuda==11.8",
    "torchaudio",
    "torchvision",
    "lightning",
    "einops",
    "opencv",
]
dynamic = ["version"]
scripts = { l2winddir_predict = "l2winddir.safe_predict:main" }

[tool.setuptools]
packages = ["l2winddir"]

[tool.setuptools_scm]
write_to = "l2winddir/_version.py"
fallback_version = "999"

[build-system]
requires = ["setuptools>=64.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"
